--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>frontend</title>
+      <meta name="google-site-verification" content="V-bgjXFWZjArYkLp6uBkxmRR85sxeDjL0dkbWZl_fnw" />
   </head>
   <body>
     <div id="root"></div>
